--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,50 @@
 body {
-	background-image: url("../images/thecontest.jpg");
+	background-image: url("../images/tile.jpg");
+	text-align:center;
+}
+
+#page-header {
+	font-family: 'Permanent Marker', cursive;
+	font-size:30px;
 }
 
 .container {
-	background:white;
+	background:beige;
 	align-self: center;
 	height:1200px;
-	width:60%;
+	width:72%;
+	}
+
+.start-page {
+	font-size:16px;
+	padding:30px;
+}
+
+#thecontest {
+	width:700px;
+	padding:50px;
+  border:10px solid black;
+  background-color:#4aaaa5;
+}
+
+#timer {
+	font-size:24px;
+	background-color:#69c8c5;
+	padding:10px;
+}
+
+#questions {
+	font-size:16px;
+	padding:20px;
+}
+
+#poster {
+		width:700px;
+	padding:50px;
+  border:10px solid black;
+  background-color:#4aaaa5
+}
+
+.answer-page {
+	font-size:18px;
 }
